fix: improve grid UX, context menu clipping, and toolbar polish (#545)

--- a/src/styles/_editor.scss
+++ b/src/styles/_editor.scss
@@ -299,7 +299,6 @@
 
 .monaco-menu .action-menu-item {
   border: 1px solid transparent;
-  padding: 1rem 0;
   height: 3rem !important;
 
   &:hover {
